Implement end-to-end running of oracle scenarios